<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> BudgetManager </string>
    <string name="title_section1"> How Much and Why ? </string>
    <string name="title_section2"> When </string>
    <string name="title_section3"> Sure ?</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amountLabel">Amount ( Decimal ) :</string>
    <string name="label">Label :</string>
    <string name="description">Description :</string>
    <string name="time">Time :</string>
    <string name="Date">Date :</string>
    <string name="date">Date :</string>
    <string name="submit">Submit</string>

</resources>
